make home button style fixed and add z-index so that it is clickable when the guess list is long

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,9 +27,10 @@ h3 {
 }
 
 #menu-btn {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
+  z-index: 1;
 }
 
 #new-game-btn,
